Fix generic layout width on small screens

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -136,7 +136,7 @@ a.no-decoration-link {
 }
 
 .generic-view-container {
-  max-width: min(960px, 100vw);
+  max-width: min(960px, 96vw);
   width: 960px;
   padding-left: var(--content-padding);
   padding-right: var(--content-padding);
